Fix 100vh on mobile bug.

--- a/assets/implang.css
+++ b/assets/implang.css
@@ -1,3 +1,8 @@
-body {
-    /* overflow: hidden; */
+html {
+    height: 100%;
+}
+
+.page-section {
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
 }
